# cookiecutter-eo-llm

./: .gitignore  404.html  CONTRIBUTING.md  Justfile  LICENSE  README.md  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
assets/: style.css
changelog/: index.html
contributing/: index.html
docs/: changelog.md  contributing.md  hooks.md  index.md  installation.md  quickstart.md  structure.md  variables.md
docs/assets/: style.css
docs/guides/: add-workflow.md  cicd.md  config-design.md  llm-context.md
docs/overrides/partials/: copyright.html
guides/add-workflow/: index.html
guides/cicd/: index.html
guides/config-design/: index.html
guides/llm-context/: index.html
hooks/: index.html  post_gen_project.py  pre_prompt.py
installation/: index.html
quickstart/: index.html
search/: search_index.json
structure/: index.html
tests/: conftest.py  test_hooks.py  test_structure.py
tests/approval/: test_rendered_agents.py  test_rendered_claude.py
tests/helpers/: render.py
tests/resources/: example_cookiecutter.json
variables/: index.html
{{cookiecutter.project_dir}}/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Justfile  README.md  pyproject.toml
{{cookiecutter.project_dir}}/.github/workflows/: ci.yml  publish.yml
{{cookiecutter.project_dir}}/.llm/: boundaries.md  commands.md  context.md  skills.md  stack.md
{{cookiecutter.project_dir}}/config/: config_{{cookiecutter.project_slug}}.yml  example_workflow.yaml
{{cookiecutter.project_dir}}/docs/: index.md  mkdocs.yml
{{cookiecutter.project_dir}}/docs/api/: index.md
{{cookiecutter.project_dir}}/knowledge_base/: architecture.md  changelog_context.md  code_map.md  current_state.md  decisions.md  workflows.md
{{cookiecutter.project_dir}}/notebooks/: 00_{{cookiecutter.project_slug}}_exploration.ipynb
{{cookiecutter.project_dir}}/scripts/: example_script.py  sync_llm.py  update_code_map.py
{{cookiecutter.project_dir}}/src/{{cookiecutter.project_slug}}/: __init__.py  logger.py  main.py
{{cookiecutter.project_dir}}/src/{{cookiecutter.project_slug}}/config/: models.py
{{cookiecutter.project_dir}}/src/{{cookiecutter.project_slug}}/workflow/: base.py  example.py
{{cookiecutter.project_dir}}/src/{{cookiecutter.project_slug}}/workflows/: base.py  example.py
{{cookiecutter.project_dir}}/tests/: conftest.py
{{cookiecutter.project_dir}}/tests/approval/: test_approval.py
{{cookiecutter.project_dir}}/tests/helpers/: config_builder.py
{{cookiecutter.project_dir}}/tests/resources/: config_{{cookiecutter.project_slug}}.yml  example_workflow.yaml  invalid_workflow.yaml
{{cookiecutter.project_dir}}/tests/unit/: test_base_workflow.py  test_config_models.py  test_example_workflow.py  test_llm_sync.py  test_logger.py  test_main.py
