[project]
name = "cookiecutter-eo-llm"
version = "0.1.0"
description = "Cookiecutter template for EO/SAR Python packages with token-efficient LLM-agnostic context files"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "cookiecutter", "eo", "sar", "remote-sensing",
    "llm", "claude", "codex", "agents", "template",
    "geospatial", "python-package", "scaffolding"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "cookiecutter>=2.6",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.10"
