[project]
name = "cookiecutter-eo-llm"
version = "0.1.0"
description = "Production-minded EO/SAR Python package template with TDD workflows and LLM-ready context"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "cookiecutter", "eo", "sar", "remote-sensing",
    "llm", "claude", "codex", "agents", "template",
    "geospatial", "python-package", "scaffolding",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
]

[project.urls]
Homepage = "https://pmuguda.github.io/cookiecutter-eo-llm/"
Repository = "https://github.com/pmuguda/cookiecutter-eo-llm"
Issues = "https://github.com/pmuguda/cookiecutter-eo-llm/issues"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "cookiecutter>=2.6",
    "ruff>=0.4",
    "mypy>=1.10",
    "genbadge[coverage]>=1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.coverage.run]
source = ["hooks", "tests/helpers"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.10"
