[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "{{cookiecutter.project_dir}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
readme = "README.md"
license = { text = "{{cookiecutter.license}}" }
authors = [{ name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}" }]
requires-python = "{{cookiecutter.python_requires}}"
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.scripts]
{{cookiecutter.project_dir}} = "{{cookiecutter.project_slug}}.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-approvaltests-geo>=1.9.0",
    "pytest-xdist>=3.0",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "bump-my-version>=0.24",
    "ipykernel>=6.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_dir}}"
Repository = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_dir}}"
Issues = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_dir}}/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/{{cookiecutter.project_slug}}"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --cov=src/{{cookiecutter.project_slug}} --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.bumpversion]
current_version = "{{cookiecutter.version}}"
commit = true
tag = true
tag_name = "v{new_version}"
commit_args = "--no-verify"
message = "chore: bump version {current_version} → {new_version}"
